success page for booking tour

--- a/app/booking-thank-you.html
+++ b/app/booking-thank-you.html
@@ -73,89 +73,49 @@
         <div class="clearfix"></div>
       </div>
     </div>
-    <div class="booking-page">
-      <div class="wrapping-gray"></div>
-      <div class="container display-table">
-        <div class="content-left display-cell p-t-70 b-r">
-          <p class="m-b-lg"><strong class="f-bold">Perhatian:</strong> Harga yang tertera adalah sebagai perkiraan terdekat. Dengan menekan tombol Make Booking, Anda akan terdaftar sebagai peminat. Customer Service kami akan menghubungi Anda via telepon/Email. Transaksi akhir tidak dilakukan di website ini.</p>
-          <form action="booking-thank-you.html" class="sapta-form booking">
-            <h4 class="section-title m-t-sm m-b-lg text-c-l text-left text-rounded">Contact&nbsp;<span class="text-yellow">Details</span></h4>
-            <div class="form-group">
-              <div class="boxing name b m-t-md">
-                <label class="block text-xs">Name</label>
-                <input type="text" value="Anissa Sudirman">
-              </div>
-              <div class="boxing phone-number b m-t-md m-r-md pull-left">
-                <label class="block text-xs">Phone Number</label>
-                <input type="text" value="" placeholder="+62 (home or mobile number)">
-              </div>
-              <div class="boxing email b m-t-md pull-left">
-                <label class="block text-xs">Email</label>
-                <input type="text" value="Anissa@gmail.com">
-              </div>
-              <div class="clearfix"></div>
-              <div class="dashed m-t-xl m-b-xl"></div>
-              <h4 class="section-title m-b-lg text-c-l text-left text-rounded">Tour&nbsp;<span class="text-yellow">Participants</span></h4>
-              <div class="block participants">
-                <div class="adult pull-left m-r-lg"><span class="label inline">Adult</span><span class="bg-white pos-rlt increase"><i class="ico ico-left"></i></span><span class="inline bg-white pos-rlt"><i class="ico ico-adult"></i>
-                    <input type="text" value="1" size="1" maxlength="1" readonly="readonly"></span><span class="bg-white pos-rlt decrease"><i class="ico ico-right"></i></span></div>
-                <div class="child pull-left m-r-lg"><span class="label inline">Child</span><span class="bg-white pos-rlt increase"><i class="ico ico-left"></i></span><span class="inline bg-white pos-rlt"><i class="ico ico-child"></i>
-                    <input type="text" value="0" size="1" maxlength="1" readonly="readonly"></span><span class="bg-white pos-rlt decrease"><i class="ico ico-right"></i></span></div>
-                <div class="infant pull-left m-r-lg"><span class="label inline">Infant</span><span class="bg-white pos-rlt increase"><i class="ico ico-left"></i></span><span class="inline bg-white pos-rlt"><i class="ico ico-baby"></i>
-                    <input type="text" value="0" size="1" maxlength="1" readonly="readonly"></span><span class="bg-white pos-rlt decrease"><i class="ico ico-right"></i></span></div>
-                <div class="clearfix"></div>
-              </div>
-              <div class="dashed m-t-xl m-b-xl"></div>
-              <h4 class="section-title m-b-lg text-c-l text-left text-rounded">Tour&nbsp;<span class="text-yellow">Preferences</span></h4>
-              <div class="boxing departure b m-b-md m-r-sm pull-left">
-                <label class="block text-xs">Departure</label>
-                <div class="pos-rlt chooseDate">
-                  <input type="text" readonly="readonly" class="date">
+    <div class="container p-t-70">
+      <div class="booking-thank-you m-t-xl">
+        <div class="thank-your-header">
+          <div class="tour-name pull-left"><span>Tour&nbsp;</span><strong class="f-bold">Best of West Europe</strong></div>
+          <div class="tour-date pull-left">10 Days | 12 Feb 2015 - 22 Feb 2015</div>
+          <div class="count-adult pull-left">2 Adults Twin Share</div>
+          <div class="clearfix"></div>
+        </div>
+        <div class="thank-your-message">
+          <h4 class="text-center section-title m-t-sm m-b-lg text-c-l text-left text-rounded">Status Penerbitan&nbsp;<span class="text-yellow">E-Ticket Anda</span></h4>
+          <p class="message-thank-you text-center">
+            <div class="m-l-xxl m-r-xxl text-center text-blackTerima">kasih telah melakukan pemesana di Saptatour.com. Staff kami akan segera memproses pemesanan ini dan menghubungi Anda via email/telepon. Bila Anda memiliki pertanyaan, silakan hubungi kami di 021 270 2727 atau email&nbsp;<a href="mailto:callcenter@saptatour.com">callcenter@saptatour.com</a></div>
+            <div class="m-t-lg text-center block f-bold text-u-c text-md">meanwhile, check out these traveling tips and guides on our blog:</div>
+          </p>
+        </div>
+        <div class="row m-t-xl b-dashed-t-gray">
+          <div class="featured blog-inspirations m-t-xl">
+            <div class="row">
+              <div class="col-md-6 blog-item pos-rlt"><img src="img/destinations/Prague-02.jpg" alt="">
+                <div class="pos-rlt post-header bg-orange">
+                  <div class="post-item text-darker pos-abt text-u-c wrapper">
+                    <label class="inline m-l-sm f-normal text-u-c">Blog</label>
+                    <h3 class="m-l-sm m-t-none"><a href="blog-detail.html" class="text-darker f-bold">Top 10 most romantic Destinations in the world</a></h3>
+                  </div>
                 </div>
               </div>
-              <div class="pull-left pos-rlt bg-white"><i class="ico ico-switch block m-t-md switch-date"></i></div>
-              <div class="boxing return b m-b-md m-l-sm pull-left pos-rlt">
-                <label class="block text-xs">Return</label>
-                <div class="pos-rlt chooseDate">
-                  <input type="text" readonly="readonly" class="date">
+              <div class="col-md-6 blog-item pos-rlt"><img src="img/destinations/Asia.jpg" alt="">
+                <div class="pos-rlt post-header bg-orange">
+                  <div class="post-item text-darker pos-abt text-u-c wrapper">
+                    <label class="inline m-l-sm f-normal text-u-c">Blog</label>
+                    <h3 class="m-l-sm m-t-none"><a href="blog-detail.html" class="text-darker f-bold">Japan Off the beaten tracks</a></h3>
+                  </div>
                 </div>
               </div>
               <div class="clearfix"></div>
-              <div class="boxing airline b m-t-md pull-left">
-                <label class="block text-xs">Preferred Airline</label>
-                <input type="text" value="Garuda Indonesia">
-              </div>
-              <div class="clearfix"></div>
-              <div class="dashed m-t-xl m-b-xl"></div>
-              <div class="boxing message b m-t-md m-b-lg pull-left">
-                <label class="block text-xs">Let us know if there’s any other comments or requests about this booking</label>
-                <textarea placeholder="Type Message" class="message"></textarea>
-              </div>
-              <div class="clearfix"></div>
-              <button type="submit" class="btn btn-primary btn-submit pull-right m-b-lg">Make Booking</button>
-              <div class="clearfix m-b-xl"></div>
             </div>
-          </form>
+            <div class="col-md-12">
+              <div class="row"><a href="#" class="block btn-show-more c-text">Show me more<strong> Inspirations</strong></a></div>
+            </div>
+            <div class="clearfix"></div>
+          </div>
         </div>
-        <div class="aside display-cell p-t-70">
-          <h5 class="m-t-xs m-b-lg text-rounded">Tour Details</h5>
-          <ul class="list-unstyled tour-ticket">
-            <li class="text-center"><span class="block">The Best</span><span class="block">Of West Europe</span></li>
-            <li class="bg-light bg-white"><i class="ico ico-departure"></i><span class="inline">Kamis, 12 Feb ‘15</span></li>
-            <li class="bg-light bg-white"><i class="ico ico-return"></i><span class="inline">Minggu, 22 Feb ‘15</span></li>
-            <li class="bg-white"><i class="ico ico-time"></i><span class="inline">10 Days</span></li>
-            <li class="bg-white"><i class="ico ico-airline-circle"></i><span class="inline">Garuda Indonesia</span></li>
-            <li class="bg-white"><i class="ico ico-adult"></i><span class="inline"><span id="count-adult">2</span> Person</span></li>
-          </ul>
-          <ul class="list-unstyled tour-pricing m-t-lg">
-            <li><span class="block">Total Price</span></li>
-            <li><span class="block gray text-u-c">2 Adults Twin Share</span><span class="block light">2 x USD 3000</span><strong class="block">$ 6000</strong></li>
-            <li><span class="block gray text-u-c">Indonesia Airport Tax</span><span class="block light">2 x Rp 100,000</span><strong class="block">Rp 200,000</strong></li>
-            <li><span class="block gray text-u-c">International Airport Tax</span><span class="block light">2 x USD 500</span><strong class="block">USD 1000</strong></li>
-            <li><span class="block gray text-u-c">Total Price</span><span class="block text-primary pricing"><span class="currency">USD</span><span class="price"><span>$</span><span class="number">7020</span></span></span></li>
-          </ul>
-          <p class="m-t-lg">Pihak Tour tetap dapat meng-update harga. Harga final akan Anda dapatkan langsung dari Customer Service kami</p>
-        </div>
+        <div class="m-b-xl wrapper-lg"></div>
       </div>
     </div>
     <div class="footer">
