--- a/app/index.html
+++ b/app/index.html
@@ -194,7 +194,7 @@
                 <div class="pos-rlt post-header bg-orange">
                   <div class="post-item text-darker pos-abt text-u-c wrapper">
                     <label class="inline m-l-sm f-normal text-u-c">Blog</label>
-                    <h3 class="m-l-sm m-t-none"><a href="blog-detail.html" class="text-darker">Top 10 most romantic Destinations in the world</a></h3>
+                    <h3 class="m-l-sm m-t-none"><a href="blog-detail.html" class="text-darker f-bold">Top 10 most romantic Destinations in the world</a></h3>
                   </div>
                 </div>
               </div>
@@ -202,7 +202,7 @@
                 <div class="pos-rlt post-header bg-orange">
                   <div class="post-item text-darker pos-abt text-u-c wrapper">
                     <label class="inline m-l-sm f-normal text-u-c">Blog</label>
-                    <h3 class="m-l-sm m-t-none"><a href="blog-detail.html" class="text-darker">Japan Off the beaten tracks</a></h3>
+                    <h3 class="m-l-sm m-t-none"><a href="blog-detail.html" class="text-darker f-bold text-darker">Japan Off the beaten tracks</a></h3>
                   </div>
                 </div>
               </div>
