fixing flights page

--- a/app/flights.html
+++ b/app/flights.html
@@ -96,8 +96,10 @@
         </div>
         <div class="m-t-sm b-dashed-b-gray m-b-xl"></div>
       </div>
-      <div class="container wrapper why-book-withs-sapta b-dashed-b-gray">
+      <div class="container">
         <h2 class="head-title text-center text-rounded">Why Book With<span class="text-yellow"> Sapta Tour ?</span></h2>
+      </div>
+      <div class="container wrapper why-book-withs-sapta b-dashed-b-gray">
         <div class="content row">
           <div class="col-md-3 reason text-center"><span class="bg-white"><i class="ico ico-customer-service"></i></span>
             <h6 class="text-u-c">The only 24 hours Tour &amp; travel in indonesia</h6>
