credit card page (not complete yet)

--- a/app/my-booking.html
+++ b/app/my-booking.html
@@ -75,17 +75,21 @@
     </div>
     <div class="account-page p-t-70">
       <div class="banner">
-        <h2 class="head-title text-white text-center">Visa &amp; Documents</h2>
+        <h2 class="head-title text-white text-center">My Account</h2>
       </div>
       <div class="my-booking-page">
         <div class="wrapping-gray"></div>
         <div class="container display-table">
           <div class="aside display-cell p-t-70 pull-right">
             <ul class="list-unstyled m-r-md m-b-xl">
-              <li><a href="#">Profile Settings</a></li>
-              <li><a href="#" class="active">My Bookings</a></li>
-              <li><a href="#">Credit Card Settings</a></li>
-              <li><a href="#">Passenger List</a></li>
+              <li><a href="my-profile-setting.html">Profile Settings</a>
+              </li>
+              <li><a href="my-booking.html" class="active">My Bookings</a>
+              </li>
+              <li><a href="my-credit-card.html">Credit Card Settings</a>
+              </li>
+              <li><a href="my-passenger-list.html">Passenger List</a>
+              </li>
             </ul>
             <div class="clearfix wrapper-xl"></div>
           </div>
