page my credit card

--- a/app/my-booking.html
+++ b/app/my-booking.html
@@ -77,7 +77,7 @@
       <div class="banner">
         <h2 class="head-title text-white text-center">My Account</h2>
       </div>
-      <div class="my-booking-page">
+      <div class="my-booking-page sidebar-gray">
         <div class="wrapping-gray"></div>
         <div class="container display-table">
           <div class="aside display-cell p-t-70 pull-right">
